--- a/styles/components/projects.module.scss
+++ b/styles/components/projects.module.scss
@@ -1,21 +1,20 @@
 .container {
 	min-height: 100vh;
 	position: relative;
-	&::before {
-		content: 'Projects';
-		color: #8d99ae;
-		display: block;
+	.back {
+		top: 0;
 		position: absolute;
-		font-size: 3rem;
-		text-transform: uppercase;
-		z-index: -1;
-		top: -1.5rem;
-		left: 10%;
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 800;
+		font-size: 4rem;
+		color: #dee2e6;
+		z-index: -1;
 		@media only screen and (min-width: 768px) {
-			font-size: 6rem;
-			top: -3rem;
+			left: 0;
+			font-size: 8rem;
 		}
+	}
+	.projects {
+		padding-top: 60px;
 	}
 }
