--- a/styles/components/projectcard.module.scss
+++ b/styles/components/projectcard.module.scss
@@ -13,10 +13,22 @@
 		p:first-child {
 			font-family: 'Open Sans', sans-serif;
 			font-weight: 800;
+			font-size: 1.5rem;
 			color: #ef233c;
 		}
 	}
 
+	@media only screen and (min-width: 640px) {
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		padding: 0 32px;
+		.image {
+			flex-shrink: 0;
+			width: 280px;
+			height: 160px;
+		}
+	}
 	@media only screen and (min-width: 768px) {
 		flex-direction: row;
 		align-items: center;
@@ -24,6 +36,8 @@
 		padding: 0 32px;
 		.image {
 			flex-shrink: 0;
+			width: 320px;
+			height: 200px;
 		}
 	}
 }
